# architect_ai

./: .replit  DEPENDENCY_INSTALLATION.md  README.md  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted-Implementing-the-Agentic-Workflow-with-LangChain-The-core-of-the-application-logic-resides-in-the-L-1753944943300_1753944943301.txt  Pasted-JiraAnalystAgent-Role-Data-ingestion-preparation-and-contextualization-Tools-JiraAPIWrapper-fo-1753942823794_1753942823795.txt  Pasted-Section-2-System-Architecture-and-Agentic-Workflow-Design-This-section-transitions-from-component--1753942447463_1753942447466.txt  architecture-document-generator_1754077855506.tsx  document-processor_1754077644104.ts  markdown-renderer_1754077855508.tsx  mermaid-diagram_1754077855509.tsx  ollama_1754077644105.ts  routes_1754077893426.ts
client/src/: App.tsx  index.css
client/src/components/: JiraAnalysisModal.tsx  MetricsCard.tsx  RecentActivity.tsx  Sidebar.tsx  SystemHealth.tsx  (+1 more)
python_agents/: .env  .env.example  README.md  agents.py  config.py  confluence_client.py  document_processor.py  jira_client.py  jira_export_tool.py  main.py  mermaid_generator.py  prompts.py  requirements.txt  start_server.py  test_jira_connection.py  ticket_document_manager.py  vector_store.py  workflow_engine.py  workflow_state.py
python_agents/jira_exports/: OAUS-4739_Jira_Details.xlsx
server/: index.ts  routes.ts  storage.ts
server/services/: agents.ts  jiraClient.ts  ollama.ts  pythonAgentsClient.ts  vectorStore.ts  workflowEngine.ts
shared/: schema.ts
(+13 files in other folders)
